Fix spacing after filer positions
On Form 700's, the linebreak was before the position instead of after. I
also changed the spacing to move the position right next the filer name.

--- a/app/assets/stylesheets/new_filings_email.scss
+++ b/app/assets/stylesheets/new_filings_email.scss
@@ -20,6 +20,10 @@
   margin-bottom: 1em;
 }
 
+.filing__filer-position {
+  margin-top: -1em;
+}
+
 .filing__metadata {
   color: #666;
   margin: 20px 0 5px 0;
